2010-03-26  Adam Barth  <abarth@webkit.org>

        Unreviewed.  Add a missing "_".

        * Scripts/webkitpy/common/net/irc/ircproxy.py:
        * Scripts/webkitpy/common/net/irc/ircproxy_unittest.py: Added.
        * Scripts/webkitpy/common/net/irc/unittests.py:

2010-03-26  Adam Barth  <abarth@webkit.org>

        Unreviewed.  Fix a the commit queue after my recent change.

        * Scripts/webkitpy/tool/bot/queueengine.py:

2010-03-26  Dirk Pranke  <dpranke@chromium.org>

        Unreviewed fix.

        Fix the return value for port/base.diff_image (changed from 1/0 to
        True/False in bug 34826.

        * Scripts/webkitpy/layout_tests/port/base.py:

2010-03-26  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Eric Seidel.

        Change the Mac port of new-run-webkit-tests to look for a
        test_expectations.txt file in addition to the Skipped files, so we
        can track pixel failures.

        https://bugs.webkit.org/show_bug.cgi?id=36619

        * Scripts/webkitpy/layout_tests/port/mac.py:

2010-03-26  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Eric Seidel.

        Implement pixel tests (image diff) properly on the Mac port.

        This change introduces a new "ServerPocess" class that can be used
        to manage processes that the run-webkit-tests harness forks off and
        expects to stay up for longer than a single request/response session.
        Both DumpRenderTree and ImageDiff use this style of communication,
        although the current code forks off a new ImageDiff for each diff
        (We need to restructure other parts of the code to be able to do this
        safely in a multi-threaded environment).

        Also, now that the ServerProcess abstraction exists, we can probably
        clean up and simplify some of the thread management logic in
        test_shell_thread as well.

        https://bugs.webkit.org/show_bug.cgi?id=34826

        * Scripts/webkitpy/layout_tests/port/mac.py: